Added static code analysis (#7)
Co-authored-by: Ivan Vakhrushev <i.vakhrushev@banki.ru>